@@ -1,4 +1,5 @@
-# Copyright 2000-2013 Free Software Foundation, Inc.
+# Copyright 2000, 2004, 2006, 2007, 2008, 2009, 2010, 2011
+# Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -16,12 +17,18 @@
 # This file was written by Anthony Green. (green@redhat.com)
 #
 
+if $tracelevel then {
+	strace $tracelevel
+}
+
 load_lib "java.exp"
 
 if { [skip_java_tests] } { continue }
 
-standard_testfile .java
-if {[compile_java_from_source $srcdir/$subdir/$srcfile $binfile "-g"] != ""} {
+set testfile "jmisc"
+set srcfile ${srcdir}/$subdir/${testfile}.java
+set binfile ${objdir}/${subdir}/${testfile}
+if {[compile_java_from_source ${srcfile} ${binfile} "-g"] != ""} {
     continue
 }
 
@@ -43,8 +50,8 @@ if [set_lang_java] then {
     # signature.
     runto_main
     set function "${testfile}.main(java.lang.String\[\])"
-    gdb_breakpoint "$function" allow-pending
-    gdb_breakpoint "${function}void" allow-pending
+    gdb_breakpoint "$function" { allow-pending }
+    gdb_breakpoint "${function}void" { allow-pending }
     gdb_continue_to_breakpoint $function
 
     gdb_test_multiple "ptype jmisc" "ptype jmisc" {
